--- a/style.css
+++ b/style.css
@@ -23,3 +23,12 @@ p {
     color: gold;
     font: 20%;
 }
+.copyright p
+{
+    background-color: #000;
+    font-family: 'Orbitron', sans-serif;
+    text-align: center;
+    margin-top: 800px;
+    padding: 10px;
+
+}
